--- a/agent/agent/package.json
+++ b/agent/agent/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
